--- a/view/includes/navbar.ejs
+++ b/view/includes/navbar.ejs
@@ -13,5 +13,6 @@
         <li><a href="/about">About</a></li>
         <li><a href="/services">Services</a></li>
         <li><a href="/signup">Signup</a></li>
+        <li><a href="/users">users</a></li>
         <li style="float:right"><a class="active" href="/login">Login</a></li>
       </ul>
