--- a/view/users.ejs
+++ b/view/users.ejs
@@ -6,12 +6,14 @@
             <th>Name</th>
             <th>Email</th>
             <th>Phone</th>
+            <th>Action</th>
         </tr>
         <%for(item of usersList){ %>
 <tr>
     <td><%=item.name%></td>
     <td><%=item.email%></td>
     <td><%=item.phone%></td>
+    <td><a href="/users/<%=item.id%>">Details </a> </td>
 </tr>
             <% }%>
     </table>
